fix to horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,10 +65,11 @@
 
   html {
     font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+    overflow-x: hidden;
   }
   
   body {
-    @apply bg-background font-dm-sans text-base text-sanctuary-text;
+    @apply bg-background font-dm-sans text-base text-sanctuary-text overflow-x-hidden;
   }
 
   h1, h2, h3, h4, h5, h6 {
